--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ google-generativeai>=0.3.0
 groq>=0.4.0
 plotly>=5.18.0
 python-docx>=1.1.0
+numpy>=1.24.0
+
+# RAG 시스템 (선택 설치 - 벡터 검색 사용 시 필요)
+# pip install sentence-transformers faiss-cpu
